<?xml version="1.0"?>
<package format="2">
  <name>biped_wbms_core</name>
  <version>0.0.0</version>
  <description>The biped_wbms_core package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cpp_filters</depend>

</package>
